--- a/react/lesson6/package.json
+++ b/react/lesson6/package.json
@@ -15,7 +15,10 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.22.3",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -25,6 +28,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "redux-devtools-extension": "^2.13.9",
     "vite": "^5.2.0"
   }
 }
